[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_independent_reserve"
version = "0.1.1"
description = "Independent Reserve exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["bt_api_base"]

[project.entry-points."bt_api.plugins"]
independent_reserve = "bt_api_independent_reserve.plugin:register_plugin"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_independent_reserve"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003", "TC"]
ignore = [
    "TC002",
    "TRY003",
]
